@@ -6094,13 +6094,143 @@ My little pony is Blacky.
 
 AT_CHECK([$COMPILE -fdefine-constant-directive=ok prog3.cob], [0], [], [])
 
-# Note: MF does not redefine a value via SET CONSTANT
-# the first definitions wins (if we remove OVERRIDE we get an error)
 AT_CHECK([./prog3], [0],
 [Your Dog's name is Barky;
 The Dog's name is Barky ;
 My Horse is Blacky ;
-My little pony is Blacky.
+My little pony is White.
+], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([DEFINE OVERRIDE])
+AT_KEYWORDS([CDF directive])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       DATA DIVISION.
+       >>SET CONSTANT DOGGY "Pluto"
+       >>SET CONSTANT PONY "Piper"
+       WORKING-STORAGE SECTION.
+       01  THEDOG    PIC X(6) VALUE DOGGY.
+
+       >>DEFINE DPONY  AS PARAMETER OVERRIDE
+       >>IF DPONY IS NOT DEFINED
+       >>DEFINE DPONY AS "No Dpony"
+       >>END-IF
+       01  CNSPONY     CONSTANT FROM DPONY.
+
+       >>DEFINE ENVPONY AS PARAMETER OVERRIDE
+       >>IF ENVPONY IS NOT DEFINED
+       >>DEFINE ENVPONY AS "No EnvPony"
+       >>END-IF
+       01  HORSE       CONSTANT FROM ENVPONY.
+       77  MYHORSE    PIC X(12) VALUE HORSE  .
+       77  MYPONYENV  PIC X(12).
+      *
+       PROCEDURE DIVISION.
+       MAIN.
+           DISPLAY "ENVPONY" UPON ENVIRONMENT-NAME
+           ACCEPT  MYPONYENV FROM ENVIRONMENT-VALUE.
+           DISPLAY "ENVPONY env var set to " MYPONYENV ";".
+           DISPLAY "1st Dog's name is " DOGGY ";".
+           DISPLAY "2nd Dog's name is " PONY ";".
+       >>IF ENVPONY IS DEFINED
+           DISPLAY "ENVPONY is DEFINED as " HORSE ";".
+       >>ELSE
+           DISPLAY "ENVPONY was NOT DEFINED;".
+       >>END-IF
+           DISPLAY "DPONY set to " CNSPONY ";".
+       >>IF ENVPONY = "WHITE" 
+       >>DEFINE CONSTANT PONY AS "White Horse" OVERRIDE
+       >>ELSE
+       >>DEFINE CONSTANT PONY AS "default Dirty" OVERRIDE
+       >>END-IF
+           DISPLAY "My pony is " PONY ";".
+       >>IF DPONY IS DEFINED
+           DISPLAY "DPONY is DEFINED as " CNSPONY ";".
+       >>END-IF
+           STOP RUN.
+])
+
+AT_CHECK([export ENVPONY=WHITE; $COMPILE prog.cob -fdefine-constant-directive=ok -DDPONY=Stallone], [0], [], [])
+
+AT_CHECK([export ENVPONY=WHITE; ./prog], [0],
+[ENVPONY env var set to WHITE       ;
+1st Dog's name is Pluto;
+2nd Dog's name is Piper;
+ENVPONY is DEFINED as WHITE;
+DPONY set to Stallone;
+My pony is White Horse;
+DPONY is DEFINED as Stallone;
+], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([DEFINE Defaults])
+AT_KEYWORDS([CDF directive])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       DATA DIVISION.
+       >>SET CONSTANT DOGGY "Pluto"
+       >>SET CONSTANT PONY "Piper"
+       WORKING-STORAGE SECTION.
+       01  THEDOG    PIC X(6) VALUE DOGGY.
+
+       >>DEFINE DPONY  AS PARAMETER OVERRIDE
+       >>IF DPONY IS NOT DEFINED
+       >>DEFINE DPONY AS "No Dpony"
+       >>END-IF
+       01  CNSPONY     CONSTANT FROM DPONY.
+
+       >>DEFINE ENVPONY AS PARAMETER OVERRIDE
+       >>IF ENVPONY IS NOT DEFINED
+       >>DEFINE ENVPONY AS "No EnvPony"
+       >>END-IF
+       01  HORSE       CONSTANT FROM ENVPONY.
+       77  MYHORSE    PIC X(12) VALUE HORSE  .
+       77  MYPONYENV  PIC X(12).
+      *
+       PROCEDURE DIVISION.
+       MAIN.
+           DISPLAY "ENVPONY" UPON ENVIRONMENT-NAME
+           ACCEPT  MYPONYENV FROM ENVIRONMENT-VALUE.
+           DISPLAY "ENVPONY env var set to " MYPONYENV ";".
+           DISPLAY "1st Dog's name is " DOGGY ";".
+           DISPLAY "2nd Dog's name is " PONY ";".
+       >>IF ENVPONY IS DEFINED
+           DISPLAY "ENVPONY is DEFINED as " HORSE ";".
+       >>ELSE
+           DISPLAY "ENVPONY was NOT DEFINED;".
+       >>END-IF
+           DISPLAY "DPONY set to " CNSPONY ";".
+       >>IF ENVPONY = "WHITE" 
+       >>DEFINE CONSTANT PONY AS "White Horse" OVERRIDE
+       >>ELSE
+       >>DEFINE CONSTANT PONY AS "default Dirty" OVERRIDE
+       >>END-IF
+           DISPLAY "My pony is " PONY ";".
+       >>IF DPONY IS DEFINED
+           DISPLAY "DPONY is DEFINED as " CNSPONY ";".
+       >>END-IF
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE prog.cob -fdefine-constant-directive=ok], [0], [], [])
+
+AT_CHECK([./prog], [0],
+[ENVPONY env var set to             ;
+1st Dog's name is Pluto;
+2nd Dog's name is Piper;
+ENVPONY is DEFINED as No EnvPony;
+DPONY set to No Dpony;
+My pony is default Dirty;
+DPONY is DEFINED as No Dpony;
 ], [])
 
 AT_CLEANUP
@@ -6252,4 +6382,3 @@ My Dog's name is Piper;
 ], [])
 
 AT_CLEANUP
-
